# doclean

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/doclean/: __init__.py  _compression.py  _convert.py  _dating.py  _whiten.py  cli.py
test/: test_documents.py
