[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[dependency-groups]
dev = [
  "pip-tools>=6.12.2",
  "pre-commit>=2.20.0",
  "pytest-cov>=4.0.0",
  "pytest>=7.2.0",
  "ruff>=0.7.1"
]

[project]
authors = [
  {email = "janphilip@gopfert.eu", name = "Jan Philip Göpfert"}
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "Pillow>=10.0.0",
  "click>=8.1.7",
  "dateparser>=1.1.8",
  "img2pdf>=0.4.4",
  "loguru>=0.7.2",
  "natsort>=8.4.0",
  "numpy>=1.25.2",
  "ocrmypdf>=14.4.0",
  "openai>=0.28.0",
  "pypdf>=3.15.4",
  "rich>=13.5.2"
]
description = "Doclean"
name = "doclean"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[project.scripts]
doclean = "doclean.cli:cli"

[project.urls]
"Bug Tracker" = "https://github.com/jangop/doclean/issues"
"Homepage" = "https://github.com/jangop/doclean"

[tool.pytest.ini_options]
addopts = "-ra --durations=10 --cov=src --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=50"

[tool.ruff]
line-length = 88
target-version = "py312"
lint.ignore = []
lint.select = ["E", "F", "I", "N"]
